add verify credential by hash
